feat: add array and object validation
work done:
- added prettier configs
- added nvm configs
- added input validation to omit inputs
- added isEmptyArray, isObject, & isEmptyObject
- added more unit tests

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "orbit",
   "version": "0.0.1",
   "description": "A modern utility library for typescript",
-  "main": "index.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "dev": "ts-node index.ts",
+    "dev": "ts-node src/app.ts",
     "test": "jest"
   },
   "repository": {
