--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "orbit",
-  "version": "0.0.1",
-  "description": "A modern utility library for typescript",
-  "main": "src/app.ts",
-  "scripts": {
-    "dev": "ts-node src/app.ts",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/xfr0ntier/orbit.git"
-  },
-  "author": "Abdelrahman Mohamed & Mohamed Khaled",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/xfr0ntier/orbit/issues"
-  },
-  "homepage": "https://github.com/xfr0ntier/orbit#readme",
-  "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  }
+    "name": "orbix",
+    "version": "0.0.1",
+    "description": "A modern utility library for typescript, with zero dependencies",
+    "main": "src/app.ts",
+    "scripts": {
+        "build": "tsc",
+        "dev": "ts-node src/app.ts",
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/xfr0ntier/orbix.git"
+    },
+    "author": "Abdelrahman Mohamed & Mohamed Khaled",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/xfr0ntier/orbix/issues"
+    },
+    "homepage": "https://github.com/xfr0ntier/orbix#readme",
+    "devDependencies": {
+        "@types/jest": "^29.5.3",
+        "jest": "^29.6.2",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+    }
 }
