--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
+    },
+    "exports": {
+        "orbit": "./src",
+        "object": "./src/object",
+        "validation": "./src/validation"
     }
 }
